TODO
* make libvmdk_handle_open_extent_data_files_file_io_pool work
* make libvmdk_handle_open_extent_data_files use libvmdk_handle_open_extent_data_files_file_io_pool

* if there is a single filename in the disk database and the current file is
  not a descriptor-only file assume the current file is the right one even if
  the names don't match
* update manuals
  - update libvmdk.3
  - update vmdkinfo.1
  - add vmdkmount.1
* handle ZERO extents?
* extent file add windows support (encoding)
  - add codepage functions + tests
  - libvmdk_extent_descriptor.c:629
  - libvmdk_descriptor_file.c:852
* implement extent file current offset ?
* implement libvmdk_extent_file_read_grain_group_element_data
* get grain data by grain table
  - remove unused functions from libvmdk_extent_table after refactor
* implement libvmdk_handle_set_maximum_number_of_open_handles
* add support for zero-grain table entry support

* code clean up:
  - support and locale functions
* add glob functions?
* debug output
  - descriptor file: disk database

API
* add functions to access storage media data
* add functions to access extents
* add functions to access grains

Tools:
* vmdkinfo:
  - add flag to have test to check if all the extent files are there?
  - same for all the parent extent files?
  - add option to print descriptor file data?
  - print dirty status
  - add byte size string support

Tests:
* open close
  - add parent support
* read
  - add parent support
* seek
  - add parent support
* add integrity tests
* add pyvmdk

* Test images
  - vmdk flat
  - vmdk flat split (done)
  - Monolithic sparse (done)
  - 2GB extent sparse (done)
  - cowd sparse
  - cowd sparse split
  - compressed (done)
  - (compressed) with parent (done)

20140421
* changes for mingw and msvsccp build
* updated msvsccp files
* code clean up
* worked on libvmdk_handle_open_extent_data_files_file_io_pool
* added support for corruption scenario where grain table entries is lager